adjusting for feedback

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </section>
 
         <section id="values">
-            <div class="row">
+            <div class="row values__row">
                 <div class="container column values">
                     <h4 class="section__header">VALUES</h4>
                     <div class="text">
